test/errors/type/collections/set/__bxor1.yasl
echo collections.set().__bxor(collections.set(), true)
